# traj_thesis

beginner_tutorials/: package.xml
control/: CMakeLists.txt
detect_roof_rectangles/: CMakeLists.txt
go_loop/: CMakeLists.txt  package.xml
go_loop/launch/: control.launch
go_loop/src/: control_node.cpp
go_stright/: CMakeLists.txt  package.xml
go_stright/launch/: control.launch
go_stright/src/: control_node.cpp
heading_msg/: CMakeLists.txt  package.xml
heading_msg/msg/: Yaw.msg
odom_cam_track/: CMakeLists.txt  package.xml
odom_cam_track/src/: camera_tracking.py  check.py  hsv_2.py  hsv_picker.py  ros_cam_track.py
odom_plotter/: CMakeLists.txt  package.xml
odom_plotter/src/: data_plot.py  odom_plotter.py  yaw_pub.py
rplidar_ros/: CMakeLists.txt
usb_cam/launch/: usb_cam-test.launch
